--- a/apache/tarefa2.conf
+++ b/apache/tarefa2.conf
@@ -4,17 +4,16 @@
     ServerAlias exemplo.lan eq1.exemplo.lan
 
     DocumentRoot /opt/web/exemplo.lan/htdocs
-    DirectoryIndex inicio.html indice.html primeiro.html
+    # DirectoryIndex inicio.html indice.html primeiro.html
 
     <Directory /opt/web/exemplo.lan/htdocs>
-        Require all granted
-        Options FollowSymLinks Includes
+        AllowOverride Options Indexes AuthConfig  
     </Directory>
 
-    <Directory /opt/web/exemplo.lan/htdocs/33>
-        DirectoryIndex indice.html inicio.html primeiro.html
-        Options +Indexes -FollowSymLinks 
-    </Directory>
+    # <Directory /opt/web/exemplo.lan/htdocs/33>
+    #     DirectoryIndex indice.html inicio.html primeiro.html
+    #     Options +Indexes -FollowSymLinks 
+    # </Directory>
 
     Alias /datos /opt/web/exemplo.lan/datos
     <Directory /opt/web/exemplo.lan/datos>
